# systray-experiment

./: Cargo.toml
src/: main.rs
